--- a/ejemploPiano/index.html
+++ b/ejemploPiano/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+    <div id="Titulos">
+        <h1>PIANO</h1>
+        <h2>Presiona las teclas para escuchar las notas</h2>
+    </div>
     <div class="container d-flex align-items-center" style="height: 100vh !important;">
         <div class="piano-container">
             <div class="key white" data-note="do">do</div>
@@ -19,13 +22,13 @@
             <div class="key white" data-note="la">la</div>
             <div class="key white" data-note="si">si</div>
 
-            <div class="key white" data-note="do-2">do-2</div>
-            <div class="key white" data-note="re-2">re-2</div>
-            <div class="key white" data-note="mi-2">mi-2</div>
-            <div class="key white" data-note="fa-2">fa-2</div>
-            <div class="key white" data-note="sol-2">sol-2</div>
-            <div class="key white" data-note="la-2">la-2</div>
-            <div class="key white" data-note="si-2">si-2</div>
+            <div class="key white user-select-none" data-note="do-2">do-2</div>
+            <div class="key white user-select-none" data-note="re-2">re-2</div>
+            <div class="key white user-select-none" data-note="mi-2">mi-2</div>
+            <div class="key white user-select-none" data-note="fa-2">fa-2</div>
+            <div class="key white user-select-none" data-note="sol-2">sol-2</div>
+            <div class="key white user-select-none" data-note="la-2">la-2</div>
+            <div class="key white user-select-none" data-note="si-2">si-2</div>
 
             <div class="key white" data-note="do-3">do-3</div>
             <div class="key white" data-note="re-3">re-3</div>
@@ -44,12 +47,12 @@
             <div class="key black" data-note="la-si" style="left: 340px;">la # <br> si ♭</div> 
             <div class="key black invisible"></div>
 
-            <div class="key black" data-note="do-re-2" style="left: 460px !important;">do # <br> re ♭</div>
-            <div class="key black" data-note="re-mi-2" style="left: 520px;">re # <br> mi ♭</div>
+            <div class="key black user-select-none" data-note="do-re-2" style="left: 460px !important;">do # <br> re ♭</div>
+            <div class="key black user-select-none" data-note="re-mi-2" style="left: 520px;">re # <br> mi ♭</div>
             <div class="key black invisible"></div>
-            <div class="key black" data-note="fa-sol-2" style="left: 640px;">fa # <br> sol ♭</div>
-            <div class="key black" data-note="sol-la-2" style="left: 700px;">sol # <br> la ♭</div>
-            <div class="key black" data-note="la-si-2" style="left: 760px;">la # <br> si ♭</div>
+            <div class="key black user-select-none" data-note="fa-sol-2" style="left: 640px;">fa # <br> sol ♭</div>
+            <div class="key black user-select-none" data-note="sol-la-2" style="left: 700px;">sol # <br> la ♭</div>
+            <div class="key black user-select-none" data-note="la-si-2" style="left: 760px;">la # <br> si ♭</div>
             <div class="key black invisible"></div>
             
             <div class="key black" data-note="do-re-3" style="left: 880px !important;">do # <br> re ♭</div>
@@ -63,6 +66,6 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
